remove fiat amount & code from client req
