# apps/tapcap-supplier/Server/Server/TapCapSupplier.Server/wwwroot/openapi-original.json
@@ -209,19 +209,12 @@
         }
       },
       "TapCapClientRequest" : {
-        "required" : [ "cryptoData", "currencyCode", "fiatAmount", "gpoData", "timestamp", "token" ],
+        "required" : [ "cryptoData", "gpoData", "timestamp", "token" ],
         "type" : "object",
         "properties" : {
           "timestamp" : {
             "type" : "integer",
             "format" : "int64"
-          },
-          "fiatAmount" : {
-            "type" : "number",
-            "format" : "double"
-          },
-          "currencyCode" : {
-            "type" : "integer"
           },
           "gpoData" : {
             "pattern" : "^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$",
